
export interface BaseResource {

  id: string;
}

export interface BaseResponse {}
